@@ -1,6 +1,10 @@
-<?php ?>
+<?php
+
+	if (elgg_is_logged_in() && (elgg_get_config("navigation_bar_position") != "disabled")) {
+?>
 <style type="text/css">
 	.elgg-page-default {
 		padding-top: 29px;
 	}
 </style>
+<?php }
